# smart-indicator

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  version.txt  wifi.c
main/: CMakeLists.txt  smart-indicator.c
main/api/: solarApi.c  solarApi.h  weatherApi.c  weatherApi.h
main/data/: time_to_pint.c  time_to_pint.h
main/hardware/: current_time.c  current_time.h  led.c  led.h
main/wifi/: page.c  page.h  wifi.c  wifi.h
