idf_component_register(SRCS "smart-indicator.c""wifi/wifi.c""wifi/wifi.h""wifi/page.c""wifi/page.h"
                            "api/weatherApi.c""api/weatherApi.h""hardware/led.h""hardware/led.c"
                            "hardware/current_time.h""hardware/current_time.c"
                            "data/time_to_pint.h""data/time_to_pint.c"
            INCLUDE_DIRS "." "wifi")
