idf_component_register(SRCS "smart-indicator.c""wifi/wifi.c""wifi/wifi.h""wifi/page.c""wifi/page.h"
                            "api/solarApi.c""api/solarApi.h""hardware/led.h""hardware/led.c"
                            "hardware/current_time.h""hardware/current_time.c"
            INCLUDE_DIRS "." "wifi")
